# oldschool

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
assets/config/: oldschool.ini
code/: .dir-locals.el  CMakeLists.txt  main.cpp
code/main/: .dir-locals.el  Application.cpp  Application.hpp  Game.cpp  Game.hpp  Pixelator.cpp  Pixelator.hpp  types.hpp
code/utility/: ALDeleter.hpp  ImageAtlas.cpp  ImageAtlas.hpp  dbg_console.cpp  dbg_console.hpp  packer.hpp  unpacker.hpp  utils.cpp  utils.hpp
